--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ a {
     color: wheat;
 }
 
-img {
+#foto-evento {
     width: 100%;
     height: 100%;
     
@@ -41,7 +41,6 @@ img {
     
     display: flex;
     height: 600px;
-    
     
 }
 
@@ -72,3 +71,63 @@ img {
     background-color: rgb(208, 207, 206);
 }
 
+
+
+.lista-eventos {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+ul.lista-eventos {
+    margin: 0;
+    padding: 0;
+}
+
+.lista-eventos li div img {
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+
+}
+
+.evento1{
+    flex: 1;
+}
+
+.evento2{
+    flex: 1;
+}
+
+.evento3 {
+    flex: 1;
+}
+
+.mais-eventos {
+    margin-top: 60px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+
+@media (max-width: 770px){
+    .lista-eventos {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+    .evento-info {
+        height: 435px;
+    }
+
+    .evento-info h2 {
+        font-size: 17px;
+        
+    }
+    
+    .evento-info p {
+        font-size: 14px;
+    }
+
+
+}
