--- a/index.css
+++ b/index.css
@@ -131,3 +131,27 @@ ul.lista-eventos {
 
 
 }
+
+.formulario {
+    
+    padding: 30px;
+    width: 900px;
+    margin: 100px auto;
+    border: 1px solid rgb(227, 222, 222);
+    border-radius: 10px;
+    background-color: rgb(231, 231, 231);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+
+
+button {
+    margin-top: 15px;
+    
+}
